// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`computeJCurvePath golden snapshots > should match snapshot for fee-adjusted NAV mode 1`] = `
{
  "nav": [
    0.04671856638357204,
    0.10473901732691596,
    0.17360157990506078,
    0.25261960594630256,
    0.3409476246885345,
    0.4376436871926003,
    0.541722875869193,
    0.6522006275553462,
    0.7681258115100515,
    0.8886043457992435,
    1.0128146057137126,
    1.1400160695065302,
    1.2695526480177481,
    1.4008520290582622,
    1.533422190502324,
    1.6668460369862337,
    1.8007749191403515,
    1.9349216159864127,
    2.0690532075533636,
    2.2029841379387896,
    2.2203044456673413,
    2.2351816713006207,
    2.2478643539068055,
    2.2585799822511334,
    2.2675357774870735,
    2.274919723605525,
    2.280901751709369,
    2.1550238907442436,
    2.027106372214559,
    1.8974321900658573,
    1.7662475810679936,
    1.6337663834780447,
    1.500173964751459,
    1.3656307400060714,
    1.2302753080500286,
    1.0942272344952744,
    0.9575895124616564,
    0.8204507311471861,
    0.6828869814881041,
    0.55,
  ],
}
`;

exports[`computeJCurvePath golden snapshots > should match snapshot for gompertz curve 1`] = `
{
  "calls": [
    0.05,
    0.05,
    0.05,
    0.05,
    0.05,
    0.05,
    0.05,
    0.05,
    0.05,
    0.05,
    0.05,
    0.05,
    0.05,
    0.05,
    0.05,
    0.05,
    0.05,
    0.05,
    0.05,
    0.05,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
  ],
  "dpi": [
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0.13061111573341225,
    0.2621507690603778,
    0.3944594127649817,
    0.527401296763763,
    0.6608612991761218,
    0.7947421195404691,
    0.928961805682685,
    1.0634515844702919,
    1.1981539667642132,
    1.3330210978719326,
    1.4680133263836475,
    1.6030979661956686,
    1.75,
  ],
  "fitRMSE": NaN,
  "nav": [
    0.05171856638357204,
    0.11473901732691597,
    0.1886015799050608,
    0.2726196059463025,
    0.3659476246885345,
    0.4676436871926003,
    0.5767228758691929,
    0.6922006275553463,
    0.8131258115100516,
    0.9386043457992435,
    1.0678146057137126,
    1.2000160695065303,
    1.3345526480177483,
    1.4708520290582623,
    1.6084221905023242,
    1.7468460369862335,
    1.8857749191403517,
    2.0249216159864125,
    2.164053207553364,
    2.3029841379387896,
    2.3253044456673413,
    2.3451816713006206,
    2.3628643539068053,
    2.3785799822511335,
    2.3925357774870735,
    2.404919723605525,
    2.415901751709369,
    2.2950238907442437,
    2.172106372214559,
    2.0474321900658574,
    1.9212475810679936,
    1.7937663834780446,
    1.665173964751459,
    1.5356307400060714,
    1.4052753080500286,
    1.2742272344952745,
    1.1425895124616563,
    1.0104507311471862,
    0.8778869814881041,
    0.75,
  ],
  "params": {
    "b": 1,
    "c": 0.5,
  },
  "tvpi": [
    0.95,
    1.0343713276714408,
    1.1473901732691596,
    1.2573438660337386,
    1.3630980297315127,
    1.463790498754138,
    1.558812290642001,
    1.6477796453405513,
    1.7305015688883656,
    1.8069462478001146,
    1.877208691598487,
    1.9414811012976592,
    2.0000267825108837,
    2.053157920027305,
    2.101217184368946,
    2.1445629206697654,
    2.183557546232792,
    2.2185587284004136,
    2.2499129066515695,
    2.2779507447930145,
    2.3029841379387896,
    2.3253044456673413,
    2.3451816713006206,
    2.3628643539068053,
    2.3785799822511335,
    2.3925357774870735,
    2.404919723605525,
    2.415901751709369,
    2.425635006477656,
    2.434257141274937,
    2.441891602830839,
    2.4486488778317566,
    2.4546276826541664,
    2.459916084291928,
    2.4645925456887565,
    2.4687268925203205,
    2.4723812012594877,
    2.475610610333589,
    2.4784640575308337,
    2.4809849476837726,
    2.5,
  ],
}
`;

exports[`computeJCurvePath golden snapshots > should match snapshot for logistic curve 1`] = `
{
  "dpi": [
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0.11200247492187444,
    0.23104009791140714,
    0.3557065122602987,
    0.4847497366278619,
    0.6170953004367831,
    0.7518497374149893,
    0.8882906804029891,
    1.0258490596549283,
    1.1640876819962278,
    1.3026791821367014,
    1.4413852210496407,
    1.5800379469493275,
    1.75,
  ],
  "fitRMSE": NaN,
  "nav": [
    0.0475,
    0.095,
    0.1425,
    0.19,
    0.2375,
    0.285,
    0.3325,
    0.38,
    0.4275,
    0.475,
    0.5225,
    0.57,
    0.6175,
    0.665,
    0.7125,
    0.76,
    0.8075,
    0.9029527647469829,
    1.069144256382865,
    1.25,
    1.3745849932811949,
    1.49671915028113,
    1.6141407655644886,
    1.7249362028190312,
    1.8276464465750122,
    1.9213119587475442,
    2.0054597213964547,
    1.9680434879129365,
    1.9143322398373734,
    1.8462861826844073,
    1.7658740405729254,
    1.674972958328411,
    1.575304211726644,
    1.4683988798498393,
    1.3555862574011552,
    1.2379980110118614,
    1.1165821561171725,
    0.9921222950081944,
    0.865258875710346,
    0.75,
  ],
  "params": {
    "r": 0.8,
    "t0": 5,
  },
  "tvpi": [
    0.95,
    0.95,
    0.95,
    0.95,
    0.95,
    0.95,
    0.95,
    0.95,
    0.95,
    0.95,
    0.95,
    0.95,
    0.95,
    0.95,
    0.95,
    0.95,
    0.95,
    0.95,
    1.0032808497188699,
    1.1254150067188053,
    1.25,
    1.3745849932811949,
    1.49671915028113,
    1.6141407655644886,
    1.7249362028190312,
    1.8276464465750122,
    1.9213119587475442,
    2.0054597213964547,
    2.080045962834811,
    2.1453723377487806,
    2.201992694944706,
    2.2506237772007873,
    2.292068258765194,
    2.3271539491416333,
    2.3566895602528284,
    2.3814353170560834,
    2.402085693008089,
    2.419261338253874,
    2.433507516057835,
    2.4452968226596736,
    2.5,
  ],
}
`;

exports[`computeJCurvePath golden snapshots > should match snapshot for piecewise curve 1`] = `
{
  "dpi": [
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0.08292307692307693,
    0.17446153846153847,
    0.27461538461538465,
    0.38338461538461543,
    0.5007692307692309,
    0.6267692307692307,
    0.7613846153846153,
    0.9046153846153846,
    1.0564615384615383,
    1.2169230769230772,
    1.386,
    1.5636923076923077,
    1.75,
  ],
  "nav": [
    0.047375,
    0.0945,
    0.141375,
    0.188,
    0.234375,
    0.28049999999999997,
    0.326375,
    0.37199999999999994,
    0.417375,
    0.4625,
    0.507375,
    0.552,
    0.596375,
    0.6405,
    0.684375,
    0.728,
    0.771375,
    0.8145,
    0.8573750000000001,
    0.9,
    0.9800000000000001,
    1.06,
    1.14,
    1.22,
    1.3,
    1.3800000000000001,
    1.4600000000000002,
    1.4570769230769232,
    1.4455384615384614,
    1.4253846153846155,
    1.3966153846153848,
    1.3592307692307695,
    1.3132307692307692,
    1.2586153846153847,
    1.1953846153846153,
    1.1235384615384616,
    1.043076923076923,
    0.9540000000000001,
    0.8563076923076922,
    0.75,
  ],
  "tvpi": [
    0.95,
    0.9475,
    0.945,
    0.9425,
    0.94,
    0.9375,
    0.9349999999999999,
    0.9325,
    0.9299999999999999,
    0.9275,
    0.925,
    0.9225,
    0.92,
    0.9175,
    0.915,
    0.9125,
    0.91,
    0.9075,
    0.905,
    0.9025000000000001,
    0.9,
    0.9800000000000001,
    1.06,
    1.14,
    1.22,
    1.3,
    1.3800000000000001,
    1.4600000000000002,
    1.54,
    1.62,
    1.7000000000000002,
    1.7800000000000002,
    1.8600000000000003,
    1.94,
    2.02,
    2.1,
    2.18,
    2.2600000000000002,
    2.34,
    2.42,
    2.5,
  ],
}
`;

exports[`computeJCurvePath golden snapshots > should match snapshot with calledSoFar calibration 1`] = `
{
  "dpi": [
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0.13061111573341225,
    0.2621507690603778,
    0.3944594127649817,
    0.527401296763763,
    0.6608612991761218,
    0.7947421195404691,
    0.928961805682685,
    1.0634515844702919,
    1.1981539667642132,
    1.3330210978719326,
    1.4680133263836475,
    1.6030979661956686,
    1.75,
  ],
  "fitRMSE": NaN,
  "tvpi": [
    0.95,
    1.0343713276714408,
    1.1473901732691596,
    1.2573438660337386,
    1.3630980297315127,
    1.463790498754138,
    1.558812290642001,
    1.6477796453405513,
    1.7305015688883656,
    1.8069462478001146,
    1.877208691598487,
    1.9414811012976592,
    2.0000267825108837,
    2.053157920027305,
    2.101217184368946,
    2.1445629206697654,
    2.183557546232792,
    2.2185587284004136,
    2.2499129066515695,
    2.2779507447930145,
    2.3029841379387896,
    2.3253044456673413,
    2.3451816713006206,
    2.3628643539068053,
    2.3785799822511335,
    2.3925357774870735,
    2.404919723605525,
    2.415901751709369,
    2.425635006477656,
    2.434257141274937,
    2.441891602830839,
    2.4486488778317566,
    2.4546276826541664,
    2.459916084291928,
    2.4645925456887565,
    2.4687268925203205,
    2.4723812012594877,
    2.475610610333589,
    2.4784640575308337,
    2.4809849476837726,
    2.5,
  ],
}
`;
